# faster-graph-bisection

./: .gitignore  Cargo.toml  LICENSE  README.md  build-all.sh  build.rs
ciff_proto/: common-index-format-v1.proto
src/: ciff.rs  forward.rs  lib.rs  output.rs  rgb.rs  rgbsort.rs
src/ciff/: proto.rs
