[package]
name = "rgb"
version = "0.1.0"
authors = []
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
thiserror = "1.0"
anyhow = "1"
rand = "0.7"
rayon = "1.5"
lazy_static = "1.4"
indicatif = "0.15"
simplelog = "0.8"
log = "0.4"
protobuf = "2.14"

[build-dependencies]
protobuf-codegen-pure = "2.14"